Changelog
=========

1.x (Unreleased)
----------------

* Added note about Paster and potentially missing eggs to readme
  [davidjb]

1.1a1
-----

* added ability to add fields to the content type and behavior schema
  [vangheem]

* moved to zopeskel.dexterity package from collective.dexteritypaste
  [vangheem]
  
1.0a1dev
--------

- Initial release