@@ -4,6 +4,15 @@ Changelog
 1.x (Unreleased)
 ----------------
 
+* Correcting date type fields to use schema.Date rather than schema.Datetime.
+  Using Datetime caused an incorrect widget being used, leading to
+  issues in KSS validation and not being able to save content.
+  [davidjb]
+* Updating collective.z3cform.datetimewidget widgets locations.  The old 
+  locations are now deprecated.
+  [davidjb]
+* Wrapped Dexterity content title/description fields in MessageFactory call
+  [davidjb]
 * Added note about Paster and potentially missing eggs to readme
   [davidjb]
 
